src/1.x/indexer.md
# Indexer

---

The indexer adds the product information to an Elasticsearch index for Reactive Search. There are multiple ways to refresh the index:

[[toc]]

## Manually

Run `php artisan rapidez:index` from the terminal.

## Scheduler

If you'd like to run the indexer frequently you can schedule the `rapidez:index` command in `app/Console/Kernel.php`
```php
$schedule->command('rapidez:index')->hourly();
```
For more information see [Task Scheduling](https://laravel.com/docs/master/scheduling)

## Webhook

Another option is to visit `/api/admin/index/products?token=` and append your `RAPIDEZ_TOKEN` from the `.env`. You can automate this however you want by calling the url. This can be useful when you want to trigger the indexer from an external system. Rapidez is using [`fastcgi_finish_request()`](https://www.php.net/fastcgi_finish_request) so you get a response really fast and the index process continues.

## Adding actions around the indexer

The indexer calls the Eventy actions `index.before` and `index.after` before and after it gets run, allowing you to include other functionality directly to the command. 

You can add actions by using `Eventy::addAction` in your application boot (e.g. in `App\Providers\AppServiceProvider:boot`) like so:

```php
Eventy::addAction('index.before', function($context) {
    $context->call('rapidez:index:sortings');
});
Eventy::addAction('index.after', function($context) {
    $context->call('rapidez:index:additionals');
});
```
